<resources>
    <string name="app_name">ADOF</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_circle">Circle</string>
    <string name="title_add">Add</string>
    <string name="title_profile">Profile</string>
    <string name="title_hide_feed">Hide from Feed</string>
    <string name="title_report">Report</string>
    <string name="title_unsubscribe">Unsubscribe</string>
    <string name="title_copy_link">Copy Link</string>
    <string name="title_share">Share Link</string>
</resources>
