<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_hide_feed" />

    <item
        android:id="@+id/navigation_circle"
        android:icon="@drawable/ic_circle"
        android:title="@string/title_report" />

    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/ic_add"
        android:title="@string/title_unsubscribe" />



    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notification"
        android:title="@string/title_copy_link" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_share" />
</menu>